Add CountryModel testcase and add descriptive comment in diffrent files

--- a/POC.xcodeproj/xcshareddata/xcschemes/POC.xcscheme
+++ b/POC.xcodeproj/xcshareddata/xcschemes/POC.xcscheme
@@ -20,6 +20,34 @@
                ReferencedContainer = "container:POC.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "NO"
+            buildForProfiling = "NO"
+            buildForArchiving = "NO"
+            buildForAnalyzing = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "F27F5D0B22315F3600B01605"
+               BuildableName = "POCTests.xctest"
+               BlueprintName = "POCTests"
+               ReferencedContainer = "container:POC.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "NO"
+            buildForProfiling = "NO"
+            buildForArchiving = "NO"
+            buildForAnalyzing = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "F27F5D1622315F3600B01605"
+               BuildableName = "POCUITests.xctest"
+               BlueprintName = "POCUITests"
+               ReferencedContainer = "container:POC.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
       </BuildActionEntries>
    </BuildAction>
    <TestAction
