--- a/POC.xcodeproj/xcshareddata/xcschemes/POC_Production.xcscheme
+++ b/POC.xcodeproj/xcshareddata/xcschemes/POC_Production.xcscheme
@@ -20,6 +20,34 @@
                ReferencedContainer = "container:POC.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "NO"
+            buildForProfiling = "NO"
+            buildForArchiving = "NO"
+            buildForAnalyzing = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "6981D2719C40563D51CA5D9C29D24383"
+               BuildableName = "Pods_POCTests.framework"
+               BlueprintName = "Pods-POCTests"
+               ReferencedContainer = "container:Pods/Pods.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "NO"
+            buildForProfiling = "NO"
+            buildForArchiving = "NO"
+            buildForAnalyzing = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "BE8C89FAA1CEAB249E99225352CF79A7"
+               BuildableName = "Pods_POCUITests.framework"
+               BlueprintName = "Pods-POCUITests"
+               ReferencedContainer = "container:Pods/Pods.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
       </BuildActionEntries>
    </BuildAction>
    <TestAction
@@ -28,6 +56,26 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "F27F5D0B22315F3600B01605"
+               BuildableName = "POCTests.xctest"
+               BlueprintName = "POCTests"
+               ReferencedContainer = "container:POC.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "F27F5D1622315F3600B01605"
+               BuildableName = "POCUITests.xctest"
+               BlueprintName = "POCUITests"
+               ReferencedContainer = "container:POC.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
       <MacroExpansion>
          <BuildableReference
